--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ streamlit==1.27.1
 pandas==2.0.3
 numpy==1.24.3
 matplotlib==3.7.2
+seaborn==0.12.2
 plotly==5.9.0
 scikit-learn==1.3.0
+streamlit-option-menu==0.3.12
