--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.27.1
 pandas==2.0.3
-numpy==1.24.3
+numpy==1.23.5  # Versión más estable y compatible
 matplotlib==3.7.2
 seaborn==0.12.2
 plotly==5.9.0
