--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+--only-binary=:all:  # Forzar la instalación solo desde wheels precompilados
+
 streamlit==1.27.1
 pandas==2.0.3
-numpy==1.23.5  
+numpy==1.23.4  # Versión estable con wheel precompilado disponible
 matplotlib==3.7.2
 plotly==5.9.0
-scikit-learn==1.2.2 
+scikit-learn==1.2.2  # Versión estable y compatible
 streamlit-option-menu==0.3.12
