--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
---only-binary=:all:  # Forzar la instalación solo desde wheels precompilados
+--only-binary=:all:
 
 streamlit==1.27.1
-pandas==2.0.3
-numpy==1.23.4  # Versión estable con wheel precompilado disponible
+pandas==2.1.1  # Cambié la versión de pandas a una que tiene wheel precompilado disponible
+numpy==1.23.4
 matplotlib==3.7.2
 plotly==5.9.0
-scikit-learn==1.2.2  # Versión estable y compatible
+scikit-learn==1.2.2
 streamlit-option-menu==0.3.12
