--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 --only-binary=:all:
 
 streamlit==1.27.1
-pandas==2.1.1  # Cambié la versión de pandas a una que tiene wheel precompilado disponible
+pandas==2.0.3
 numpy==1.23.4
 matplotlib==3.7.2
 plotly==5.9.0
