--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 
 streamlit==1.27.1
 pandas==2.1.1
-numpy==1.26.4  # Versión compatible
-matplotlib==3.9.1  # La última versión compatible que se menciona en los logs
+numpy==1.26.4
+matplotlib==3.9.1
 plotly==5.9.0
-scikit-learn==1.2.2
+scikit-learn==1.3.2  # Actualización a una versión compatible con Python 3.12
 streamlit-option-menu==0.3.12
