--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
---only-binary=:all:
-
 streamlit==1.27.1
-pandas==2.1.1
-numpy==1.26.4
-matplotlib==3.9.1
+pandas==2.0.3
+numpy==1.24.3
+matplotlib==3.7.2
 plotly==5.9.0
-scikit-learn==1.3.2  # Actualización a una versión compatible con Python 3.12
-streamlit-option-menu==0.3.12
+scikit-learn==1.3.0
+gdown==4.7.1
