--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 streamlit==1.27.1
 pandas==2.0.3
 numpy==1.24.3
-matplotlib==3.7.2
-plotly==5.9.0
-scikit-learn==1.3.0
-gdown==4.7.1
+setuptools==65.5.0  # This includes distutils, required for building
+gdown==4.7.1  # To handle downloading the model from Google Drive
