--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 streamlit==1.27.1
-pandas==2.0.3  # Make sure this matches the version you want
-numpy>=1.22.4  # Ensure compatibility with pandas
-gdown==4.7.1   # For downloading files from Google Drive
-setuptools>=65.5.0  # Needed for building some dependencies like numpy
+pandas==2.0.3
+numpy==1.24.3
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.9.0
+scikit-learn==1.3.0
+streamlit-option-menu==0.3.12
+setuptools==58.0.4  # For handling builds and distutils
+gdown==4.7.1  # For downloading the model from Google Drive
