--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,4 @@ seaborn==0.12.2
 plotly==5.9.0
 scikit-learn==1.3.0
 streamlit-option-menu==0.3.12
-setuptools==58.0.4  # For handling builds and distutils
-gdown==4.7.1  # For downloading the model from Google Drive
+gdown==4.6.0
