--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit==1.27.1
 pandas==2.0.3
-numpy==1.23.2
+numpy>=1.23.2
 matplotlib==3.7.2
 seaborn==0.12.2
 plotly==5.9.0
 scikit-learn==1.3.0
 streamlit-option-menu==0.3.12
-setuptools==65.5.0
-gdown==4.7.1
+gdown
+setuptools
